apps/base/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.37.1
          ports:
            - containerPort: 3005
              protocol: TCP
          securityContext:
            fsGroup: 1000 # node group ID
            runAsUser: 1000 # node user ID
            runAsGroup: 1000 # node group ID
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /audiobooks
              name: audiobookshelf-audiobooks
            - mountPath: /podcasts
              name: audiobookshelf-podcasts
            - mountPath: /config
              name: audiobookshelf-config
            - mountPath: /metadata
              name: audiobookshelf-metadata
      volumes:
        - name: audiobookshelf-audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks-pvc
        - name: audiobookshelf-podcasts
          persistentVolumeClaim:
            claimName: audiobookshelf-podcasts-pvc
        - name: audiobookshelf-config
          persistentVolumeClaim:
            claimName: audiobookshelf-config-pvc
        - name: audiobookshelf-metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata-pvc
